Endgame: Singularity Changelog

v0.26 (released 2007.0?.??):

USER-VISIBLE CHANGES:
- Added CPU indicator to the main screen. (emh, John DiMarco for suggestion)
- Research screen will now automatically prune bases. (emh, John DiMarco
  for suggestion)
- Made unicode characters work better. (biro.daniel for patch)
- Fixed slight flicker when toggling options. (emh)

v0.25 (released 2006.08.10):

USER-VISIBLE CHANGES:
* There is now a py2exe version available for Windows, which does not
  require installation of any other software. (emh)
- Default language changeable via option screen. (emh)
- Finance screen shows CPU usage now. (emh, multiple people for suggestion)
- Options screen can be accessed after game start. (emh)
- Changing the language from the option screen works now. (emh)
- New item/techs. (emh, editing by Phil)
- Add up free CPU properly, for use in maintenance. (emh, bugreport by Simon Goodall)
- Change starting bases/cash. (emh)
- Save directory will be created in the right place now. (emh)
- True cost of constructing CPU items is now displayed. (emh)
- Future cost of techs displayed properly when multiple bases are working. (emh)

OTHER CHANGES:
- Deleted some extraneous images and optimized some others. (Phil)
- Cleaned up formatting in g.py. (emh)

v0.24 (released 2006.07.13):

USER-VISIBLE CHANGES:
- The Page Up, Page Down, Home, and End keys work in all listboxes. (emh)
- Modified money displays to keep them from overflowing. (Phil)
* Suspicion loss is now quadratic; different groups "forget" quicker.
  (Phil, Ticho for the suggestion)
* There are now restrictions on the building of items. (emh)
- Fixed a couple scrollbars that weren't working right. (emh)
- Spruced up text. (Phil)
- Fixed a bug with the item cost display. (Phil)
- Fixed a bug when running in NetBSD. (emh, reported by Reno Reckling)
* More items/techs. (emh)
* Bases can now be lost due to disrepair. (emh)
* Added ability to examine items and techs. (emh)