@@ -8,6 +8,7 @@ USER-VISIBLE CHANGES:
   for suggestion)
 - Made unicode characters work better. (biro.daniel for patch)
 - Fixed slight flicker when toggling options. (emh)
+- Added difficulty selection. (emh, many people for suggestion)
 
 v0.25 (released 2006.08.10):
 
